[gd_scene load_steps=4 format=3 uid="uid://j062bqsxhjht"]

[ext_resource type="Script" path="res://gui.gd" id="1_dqank"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dbsko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5onet"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_dqank")

[node name="Sim_Settings" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_bottom = 78.0
grow_horizontal = 0

[node name="Sim_Settings" type="VBoxContainer" parent="Sim_Settings"]
layout_mode = 2

[node name="G_Label" type="Label" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2
text = "Garvitational constant:"

[node name="G" type="SpinBox" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2
step = -1.0
allow_greater = true
suffix = "N⋅m2⋅kg−2"

[node name="HSeparator" type="HSeparator" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2

[node name="Distribution_Label" type="Label" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2
text = "Distribution type:"

[node name="Distribution" type="OptionButton" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2

[node name="Particle_Count_Label" type="Label" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2
text = "Particles:"

[node name="Particle_Count" type="HSlider" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2
min_value = 1.0
max_value = 500.0
value = 1.0
tick_count = 3
ticks_on_borders = true

[node name="HSeparator3" type="HSeparator" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2

[node name="Reset" type="Button" parent="Sim_Settings/Sim_Settings"]
layout_mode = 2
text = "Reset Sim"

[node name="Stats" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -34.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8

[node name="Box" type="VBoxContainer" parent="Stats"]
layout_mode = 2

[node name="FPS" type="HBoxContainer" parent="Stats/Box"]
layout_mode = 2

[node name="FPS_Label" type="Label" parent="Stats/Box/FPS"]
layout_mode = 2
text = "FPS:"

[node name="VSeparator" type="VSeparator" parent="Stats/Box/FPS"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_dbsko")

[node name="FPS" type="Label" parent="Stats/Box/FPS"]
layout_mode = 2

[node name="Frame_Time" type="HBoxContainer" parent="Stats/Box"]
layout_mode = 2

[node name="Time_Label" type="Label" parent="Stats/Box/Frame_Time"]
layout_mode = 2
text = "Avg frame time:"

[node name="VSeparator" type="VSeparator" parent="Stats/Box/Frame_Time"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_5onet")

[node name="Time" type="Label" parent="Stats/Box/Frame_Time"]
layout_mode = 2
